deploy_cluster_logging role: finalize

--- a/ansible/roles/deploy_cluster_logging/templates/elasticsearch_operator-operatorgroup.yaml.j2
+++ b/ansible/roles/deploy_cluster_logging/templates/elasticsearch_operator-operatorgroup.yaml.j2
@@ -4,8 +4,4 @@ kind: OperatorGroup
 metadata:
   name: {{ elasticsearch_operator_operatorgroup.name }}
   namespace: {{ elasticsearch_operator_namespace.name }}
-spec:
-  targetNamespaces:
-{% for namespace in elasticsearch_operator_operatorgroup.spec.targetNamespaces %}
-  - {{ namespace }}
-{% endfor %}
+spec: {}
