--- a/ansible/roles/deploy_cluster_logging/templates/elasticsearch_operator-subscription.yaml.j2
+++ b/ansible/roles/deploy_cluster_logging/templates/elasticsearch_operator-subscription.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  generateName: "elasticsearch-"
+  name: "{{ elasticsearch_operator_subscription }}"
   namespace: {{ elasticsearch_operator_namespace.name }}
 spec:
   channel: "{{ elasticsearch_operator_channel }}"
