--- a/ansible/roles/deploy_cluster_logging/templates/cluster_logging_operator-subscription.yaml.j2
+++ b/ansible/roles/deploy_cluster_logging/templates/cluster_logging_operator-subscription.yaml.j2
@@ -9,4 +9,4 @@ spec:
   installPlanApproval: "Automatic"
   source: "redhat-operators"
   sourceNamespace: "{{ openshift_marketplace_namespace }}"
-  name: "elasticsearch-operator"
+  name: "cluster-logging"
